deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testdmn
    app.kubernetes.io/component: testdmn
    app.kubernetes.io/instance: testdmn
    app.kubernetes.io/part-of: testdmn-app
  name: testdmn
spec:
  clusterIP: 10.101.124.11
  clusterIPs:
  - 10.101.124.11
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: 8080-tcp
  selector:
    app: testdmn
  sessionAffinity: None
  type: ClusterIP
